--- a/scripts/jquery.highlight-within-textarea.css
+++ b/scripts/jquery.highlight-within-textarea.css
@@ -6,7 +6,7 @@
 .hwt-backdrop {
 	position: absolute !important;
 	top: 0 !important;
-	/*right: -99px !important;*/
+	right: 7px !important;*/
 	bottom: 0 !important;
 	left: 0 !important;
 	/*padding-right: 99px !important;*/
